--- a/GamrOfUniverse/GamrOfUniverse/Properties/Resources.resx
+++ b/GamrOfUniverse/GamrOfUniverse/Properties/Resources.resx
@@ -118,10 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="MapOfChinaTaiwan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\MapOfChinaTaiwan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GameOfUniverse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\GameOfUniverse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="You_won" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\You_won.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VoyagerEarthGameStart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\VoyagerEarthGameStart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MapOfChinaTaiwanFull" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\MapOfChinaTaiwanFull.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
